@@ -1,3 +1,13 @@
+2001-08-04  Kevin Vandersloot <kfv101@psu.edu>
+
+	* procman.c: new config variables to save window geometry.
+	Save the window size on exit.
+
+	* interface.c: set the default size.
+
+	* memmaps.c: remove some debugging stuff and the connecting 
+	to the right click signal.
+
 2001-08-03  Kevin Vandersloot <kfv101@psu.edu>
 
 	* load-graph.c: call load_graph_draw on the configure event. This
